# ChainX

./: .gitignore  Cargo.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  pr.yml  release.yml  security.yml
src/: api_key.rs  error.rs  lib.rs  main.rs
src/api/: error.rs  mod.rs
src/api/etherscan/: contract.rs  mod.rs  parser.rs  price.rs  transactions.rs  url.rs
src/api/rpc/: client.rs  error.rs  mod.rs  request.rs
src/app/: api_key.rs  config.rs  error.rs  input.rs  mod.rs
src/cache/: mod.rs  price.rs
src/commands/: address.rs  block.rs  contract.rs  mod.rs  transaction.rs
src/config/: chains.rs  constants.rs  mod.rs
src/formatting/: address.rs  block.rs  chains.rs  display.rs  mod.rs  tables.rs  token.rs  transaction.rs
src/models/: address.rs  block.rs  contract.rs  mod.rs  price.rs  rpc.rs  token.rs  transaction.rs
src/tui/: app.rs  events.rs  mod.rs  terminal.rs  ui.rs
src/tui/widgets/: address.rs  block.rs  common.rs  contract.rs  mod.rs  transaction.rs
src/utils/: hex.rs  math.rs  mod.rs  status.rs  text.rs  time.rs  units.rs
src/validation/: contract.rs  input.rs  mod.rs  unicode.rs
