[package]
name = "chainx"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
chrono = "0.4"
dotenv = "0.15"
hex = "0.4"
ratatui = "0.29"
crossterm = "0.28"
unicode-width = "0.2"
